# embedded-sensors

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
src/ak8963/: mod.rs
src/bh1750/: config.rs  mod.rs  register.rs  result.rs
src/e32/: config.rs  mod.rs  result.rs
src/mpu6500/: mod.rs
src/mpu925x/: mod.rs
src/ublox/: mod.rs
